changed user permissions message

--- a/ArtNYC/Info.plist
+++ b/ArtNYC/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This allows you to see your location relative to the museums.</string>
+	<string>This allows you to see your location on the museums map.</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
