changed to black

--- a/ArtNYC/Info.plist
+++ b/ArtNYC/Info.plist
@@ -16,7 +16,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleDisplayName</key>
-	<string>artMuseumsNYC</string>
+	<string>art nyc</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
